--- a/website.css
+++ b/website.css
@@ -2,6 +2,7 @@
     background: #090b96;
     color: white;
     padding: 40px 0;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .header-content {
@@ -42,6 +43,7 @@
     text-align: center;
     font-family:Arial, sans-serif ;
     background-color: white;
+    font-weight:bold;
 }
 .navbar a {
     margin: 0 10px;
@@ -80,13 +82,14 @@
 .img-text-row{                /*  25 year logo */ 
     display: flex;
     align-items: center; /* vertically center */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     gap: 50px; /* space between img and text */
 }
  
 
 .side-text {                  /*  about page  */
     font-size: 1.1em;
-    font-style: italic;
+    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
  .contact{                      /* footer contact */
@@ -103,23 +106,14 @@
     font-size: medium;
 }
 
-/* .login{
-    font-style:'Segoe UI', sans-serif;
-    text-align: center;
-    color: white;
-    background-color:#090b96;
-    padding: auto;
-
-} */
-
-.form{
+/* .form{
     text-align:center;
     padding: 5px;
     display: flex;
     justify-content: center;
     padding: 20px;
     border-radius: 10px;
-}
+} */
 
 .aboutcharusat{
     text-align: left;
@@ -132,17 +126,17 @@
     text-align: center;
 }
 
-.event{
+/* .event{
     background-color: #090b96;
     color: white;
     text-align: center;
-}
-.ganesh{
+} */
+/* .ganesh{
     text-align: center;
-}
-.NA{
+} */
+/* .NA{
     background-color:bisque ;
-}
+} */
 .dashboard{
     font-family:Arial, Helvetica, sans-serif;
     font-size:x-large;
@@ -187,7 +181,7 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .event2{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size:x-large;
     text-align: center;
     color: #2008bf;
@@ -201,7 +195,6 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .eventbox{
-    font-style: italic;
     font-size:large;
     align-items: center;
     color: #2008bf;
@@ -217,11 +210,11 @@
 .event2 :hover, .eventbox:hover {
       transform: scale(1.05);
       background-color:rgb(255, 255, 255);
-      color: #e62e2e;
+      color: #901010;
     }
     
     .profile{
-        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-size:large;
         align-items: center;
         text-align: center;
@@ -236,8 +229,7 @@
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         
     }
-    .resultbox{
-        font-style: italic;
+    /* .resultbox{
         font-size:large;
         text-align: center;
         color: #2008bf;
@@ -249,7 +241,7 @@
         width: 300px;
         margin: 20px auto;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+    } */
 
 /* FAQ's */
 
@@ -415,7 +407,7 @@
     font-size: 24px;
     color: #000066;
     margin-bottom: 20px;
-    font-style: italic;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .result-form label {
@@ -423,7 +415,7 @@
     margin-top: 15px;
     font-weight: bold;
     color: #000080;
-    font-style: italic;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
 }
 
